# gencodegenes

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
src/: gencode.cpp  gencode.h  gtf.cpp  gtf.h  tx.cpp  tx.h
src/gencodegenes/: __init__.py  gencode.pyx  transcript.pxd  transcript.pyx
tests/: test_gencode.py  test_sequence_methods.py  test_transcript.py
