[build-system]
requires = ["cython", "setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'gencodegenes'
version = '1.1.6'
description = 'Package to load genes from GENCODE GTF files'
readme = 'README.md'
license = 'MIT'
license-files = ['LICENSE.txt']
requires-python = ">=3.8"
authors = [
    {name = 'Jeremy McRae', email = 'jeremy.mcrae@gmail.com'}
]

dependencies = [
    'pyfaidx >= 0.5.8',
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.setuptools]
packages = [
    "gencodegenes"
]

[project.urls]
homepage = 'https://github.com/jeremymcrae/gencodegenes',
